# speakleash-forum-tools

./: .dockerignore  .gitignore  Dockerfile  README.md  UNSLOTH_APT3-1B-PLmodel_A100_full.py  invision-forum-crawler.py  ipboard-forum-crawler.py  phpbb-forum-crawler.py  pyproject.toml  requirements.txt  run_examples.py  test.py  webui.py
speakleash_forum_tools/: __init__.py  __version__.py  archive_manager.py  cli.py  config.py  config_manager.py  core.py  crawler_manager.py  forum_engines.py  manifest_manager.py  scraper.py  utils.py
speakleash_forum_tools/config/: config_manager.py
speakleash_forum_tools/crawler/: __init__.py  crawler_manager.py
speakleash_forum_tools/forums/: forum_engines.py
speakleash_forum_tools/forums_engines/: __init__.py  forum_engines.py
speakleash_forum_tools/src/: __version__.py  archive_manager.py  config_manager.py  core.py  crawler_manager.py  forum_engines.py  manifest_manager.py  scraper.py  utils.py
speakleash_forum_tools/src/config/: __init__.py  config_manager.py
speakleash_forum_tools/utils/: __init__.py  utils.py
z_delete_after_refactor/: ipboard-forum-crawler.py  notki_GPT_helper.txt  requirements.txt  the_plan.txt
